# Trains

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  main.cpp
docs/code/: Doxyfile  build-docs.bat  conf.py  pyproject.toml
docs/code/source/: conf.py  index.rst
docs/code/source/architecture/: game_overview.rst
docs/code/source/codestyle/: codestyle.rst
docs/code/source/resources/: production.rst  resources.rst
docs/code/source/transportation/: scheduling.rst  signals.rst  stations.rst  tracks.rst  trains.rst  transportation.rst
docs/code/source/ui/: interaction_layer.rst  ui.rst  world_view_layer.rst
docs/code/source/ui/renderer/: camera.rst  canvas.rst  renderer.rst  shapes.rst
docs/code/source/utilities/: logging.rst  widgy.rst
docs/code/source/utilities/widgy/: widget_lifecycle.rst
docs/code/source/world/: cities.rst  city_planner.rst  region.rst  world.rst
docs/gameplay/: build-docs.bat
docs/gameplay/source/: conf.py  index.rst  user_interface.rst
examples/: CMakeLists.txt  Examples.cpp
examples/base/: CMakeLists.txt  Terrain1.cpp  Terrain1.h  WorldView1.cpp  WorldView1.h
examples/interface/: BasicPieMenu.cpp  BasicPieMenu.h  CMakeLists.txt
examples/menu/: BasicMenu.cpp  BasicMenu.h  CMakeLists.txt
examples/train/: BasicTrack.cpp  BasicTrack.h  CMakeLists.txt
interface/worldview/: WorldView.cpp  WorldView.h
libs/: CMakeLists.txt
libs/cityplanner/: CMakeLists.txt
libs/cityplanner/include/CityPlanner/: City.h  Region.h  Types.h  Utils.h  World.h
libs/cityplanner/include/CityPlanner/Rail/: RailNetwork.h  RailNetworkBuilder.h  Track.h
libs/cityplanner/include/CityPlanner/Simulation/: ProductionCommon.h  Recipes.h
libs/cityplanner/include/CityPlanner/Terrain/: Dirt.h  Forests.h  Mines.h  Rivers.h  Terrain.h
libs/cityplanner/source/: City.cpp  Region.cpp  Utils.cpp  World.cpp
libs/cityplanner/source/Rail/: RailNetwork.cpp  RailNetworkBuilder.cpp
libs/cityplanner/source/Terrain/: Dirt.cpp  Forests.cpp  Rivers.cpp  Terrain.cpp
libs/drafter/: CMakeLists.txt
libs/drafter/include/Drafter/: Camera.h  Canvas.h  Drafter.h  Shape.h  Types.h  Utils.h
libs/drafter/include/Drafter/Overlay/: DataTreeOverlay.h  DebugOverlay.h  ImGuiOverlay.h  Overlay.h
libs/drafter/include/Drafter/Shapes/: Circle.h  HexGrid.h  Label.h  NGon.h
libs/drafter/include/Drafter/Utils/: Color.h  Font.h
libs/drafter/source/: Camera.cpp  Canvas.cpp  Shape.cpp  Utils.cpp
libs/drafter/source/Overlay/: DataTreeOverlay.cpp  DebugOverlay.cpp  ImGuiOverlay.cpp  Overlay.cpp
libs/drafter/source/Shapes/: Circle.cpp  HexGrid.cpp  Label.cpp  NGon.cpp
libs/drafter/source/Utils/: Color.cpp  Font.cpp
libs/event/: CMakeLists.txt
libs/event/include/Events/: Event.h
libs/log/: CMakeLists.txt
libs/log/include/Log/: Log.h
libs/log/source/: Log.cpp
libs/types/: CMakeLists.txt
libs/types/include/Types/: Types.h  Utils.h
libs/types/source/: Utils.cpp
source/: CMakeLists.txt  Game.h  ViewModel.cpp  ViewModel.h  game.cpp  main.cpp
source/engine/: CMakeLists.txt  Core.h
source/interface/: CMakeLists.txt
source/interface/interaction/: CMakeLists.txt  Interface.cpp  Interface.h  PieMenu.cpp  PieMenu.h
source/interface/worldview/: CMakeLists.txt  CityView.cpp  CityView.h  TransportView.cpp  TransportView.h  WorldView.cpp  WorldView.h
